Remove last warnings + update release notes